fixed navbar alignment

--- a/client/src/Components/HeroSection.css
+++ b/client/src/Components/HeroSection.css
@@ -21,19 +21,23 @@ video {
   
   .hero-container > h1 {
     color: #fff;
-    font-size: 70px;
+    font-size: 47px;
     text-align: center;
-    font-weight: 800;
+    /* font-weight: 800; */
+    font-weight: 700;
     margin-top: -50px;
-    font-family: 'Poppins', sans-serif; 
+    letter-spacing: 3px;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
   
   .hero-container > p {
     margin-top: 80px;
     color: #fff;
     text-align: center;
-    font-size: 20px;
-    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    font-family: 'Hind Vadodara', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
   }
   
   .hero-btns {
@@ -41,7 +45,7 @@ video {
   }
   
   .hero-btns .btn {
-    margin: 6px;
+    margin: 0px 35px;
   }
   
   .fa-play-circle {
