--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80px;
+    height: 0px;
     max-width: 1500px;
 }
 
@@ -38,7 +38,7 @@
     text-align: center;
     width: 60vw;
     justify-content: end;
-    margin-right: 2rem;
+    /* margin-right: 2rem; */
 }
 
 .nav-item {
@@ -51,6 +51,7 @@
     align-items: center;
     text-decoration: none;
     padding: 1rem;
+    padding-bottom: 0px;
     height: 100%;
 }
 
